--- a/Views/User/Usermain.cshtml
+++ b/Views/User/Usermain.cshtml
@@ -4,5 +4,26 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Hello world</p>
+    <p>User information page</p>
 </div>
+
+<form method="post">
+<div class="form-group">
+    <label for="InputName">Name</label>
+    <input type="Name" class="form-control" id="InputName1id" placeholder="Input Name" name="name"/>
+  </div>
+  <div class="form-group">
+    <label for="exampleInputEmail">Email address</label>
+    <input type="Email" class="form-control" id="exampleInputEmailID" aria-describedby="emailHelp" placeholder="Enter email" name="email"/>
+  </div>
+
+  <div class="form-group">
+    <label for="exampleInputPassword1">Password</label>
+    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" name="password"/>
+  </div>
+  @*<div class="form-check">
+    <input type="checkbox" class="form-check-input" id="exampleCheck1">
+    <label class="form-check-label" for="exampleCheck1">Check me out</label>
+  </div>*@
+  <button type="submit" class="btn btn-primary">Submit</button>
+</form>
