--- a/Views/User/Usermain.cshtml
+++ b/Views/User/Usermain.cshtml
@@ -1,10 +1,9 @@
 ﻿@{
-    ViewData["Title"] = "User main page";
+    ViewData["Title"] = "New user";
 }
-
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>User information page</p>
+     <p>@ViewData["Message"]</p>
 </div>
 
 <form method="post">
