Checkbox for select all and change status

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -43,6 +43,8 @@
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
+            @RenderSection("Scripts2", required: false)
+            @RenderSection("Scripts3", required: false)
         </main>
     </div>
 
